modified: updateuser controller & builders
